# rust-rocksdb

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERSHIP.md  Makefile  README.md  circle.yml  code-of-conduct.md  rustfmt.toml
.github/workflows/: rust.yml
.travis/: lints.sh  tests.sh
benches/: benches.rs  mod.rs
benches/cases/: bench_wal.rs  mod.rs
examples/primary-service/: Cargo.toml  build.rs
examples/primary-service/proto/: compaction.proto  worker.proto
examples/primary-service/src/: main.rs
examples/remote-worker/: Cargo.toml  build.rs
examples/remote-worker/src/: main.rs
librocksdb-sys/: Cargo.toml  Makefile  README.md  build.rs  build_version.cc  gen_statistics.bash  repair_db_cf.cc  rocksdb-c.cc  rocksdb-c.h  rocksdb_lib_sources.txt  wrapper.h
librocksdb-sys/crocksdb/: c.cc  c.h
librocksdb-sys/rocks/: c.h  ctypes.hpp  write_buffer_manager.cc
librocksdb-sys/rocksdb_ext/: c.cc
librocksdb-sys/rocksdb_ext/rocksdb_ext/: c.h  encrypted.cc  encrypted.h
librocksdb-sys/src/: ffi.rs  lib.rs  test.rs
librocksdb-sys/tests/: ffi.rs
librocksdb_sys/: Cargo.toml  build.rs  build.sh
librocksdb_sys/bindings/: aarch64-unknown-linux-gnu-bindings.rs  x86_64-unknown-linux-gnu-bindings.rs
librocksdb_sys/crocksdb/: c.cc  format-diff.sh
librocksdb_sys/crocksdb/crocksdb/: c.h
librocksdb_sys/crocksdb/rocksdb/: c.h
librocksdb_sys/librocksdb_cloud_sys/: CMakeLists.txt  Cargo.toml  build.rs
librocksdb_sys/librocksdb_cloud_sys/cmake_modules/: rocksdb_flags.cmake
librocksdb_sys/librocksdb_cloud_sys/src/: lib.rs
librocksdb_sys/libtitan_sys/: Cargo.toml  build.rs
librocksdb_sys/libtitan_sys/src/: lib.rs
librocksdb_sys/rocksdb/: CMakeLists.txt
librocksdb_sys/rocksdb/db/: column_family.cc  column_family.h  compaction.cc  compaction_job.cc  compaction_job_test.cc  compaction_picker.cc  compaction_picker.h  compaction_picker_universal.cc  db_compaction_test.cc  db_flush_test.cc  db_impl.cc  db_impl.h  db_impl_compaction_flush.cc  db_impl_debug.cc  db_impl_write.cc  db_iter.cc  db_iter_test.cc  db_iterator_test.cc  db_test.cc  db_test2.cc  external_sst_file_ingestion_job.cc  range_del_aggregator.cc  range_del_aggregator.h  version_set.cc  version_set.h
librocksdb_sys/rocksdb/include/rocksdb/: db.h  listener.h  options.h
librocksdb_sys/rocksdb/options/: options.cc
librocksdb_sys/rocksdb/table/: block_based_filter_block.cc  block_based_table_builder.cc  filter_block.h  full_filter_block.h  partitioned_filter_block.cc
librocksdb_sys/rocksdb/util/: crc32c.cc
librocksdb_sys/rocksdb/utilities/blob_db/: blob_db_impl.cc
librocksdb_sys/rocksdb/utilities/transactions/: transaction_test.cc
librocksdb_sys/src/: generate.py  generated.rs  lib.rs
rocksdb-sys/: Cargo.toml  Makefile  README.md  build.rs  build_version.cc  lib.rs  rocksdb_lib_sources.txt  snappy-stubs-public.h
rocksdb-sys/rocksdb/: CMakeLists.txt
rocksdb-sys/rocksdb/db/: auto_roll_logger.h  db_filesnapshot.cc
rocksdb-sys/rocksdb/env/: env_posix.cc
rocksdb-sys/src/: ffi.rs  lib.rs  test.rs
rocksdb-sys/tests/: ffi.rs
rocksdb_sys/: Cargo.toml
scripts/: format-diff.sh  generate-bindings.sh
snappy-sys/: snappy-stubs-public.h
src/: .ffi.rs.swo  .merge_operator.rs.swo  .rocksdb.rs.swo  backup.rs  cache.rs  checkpoint.rs  cloud.rs  column_family.rs  compaction_filter.rs  compaction_filter_factory.rs  compaction_service.rs  comparator.rs  db.rs  db_iterator.rs  db_options.rs  db_pinnable_slice.rs  db_vector.rs  encryption.rs  env.rs  event_listener.rs  external_file.rs  ffi.rs  ffi_util.rs  file_system.rs  global.rs  handle.rs  iter_range.rs  lib.rs  logger.rs  main.rs  merge_operator.rs  metadata.rs  open_raw.rs  optimistic_transaction_db.rs  optimistictransactiondb.rs  perf.rs  perf_context.rs  prelude.rs  prop_name.rs  properties.rs  (+25 more)
src/ops/: backup.rs  checkpoint.rs  column_family.rs  columnfamily.rs  compact.rs  compact_range.rs  delete.rs  delete_file_in_range.rs  delete_range.rs  flush.rs  get.rs  get_pinned.rs  ingest_external_file.rs  iter.rs  iterate.rs  merge.rs  mod.rs  multi_get.rs  open.rs  perf.rs  property.rs  put.rs  set_options.rs  setoptions.rs  snapshot.rs  transaction.rs  write_batch.rs  writebatch.rs
src/transactions/: mod.rs  optimistic_transaction_db.rs  options.rs  transaction.rs  transaction_db.rs
src/txn/: mod.rs  options.rs  txn.rs  txn_db.rs
src/txn_db/: db.rs  mod.rs  options.rs  txn.rs
test/: .test_column_family.rs.swo  test.rs  test_column_family.rs  test_column_family.rs.orig  test_compact_range.rs  test_compaction_filter.rs  test_ingest_external_file.rs  test_iterator.rs  test_multithreaded.rs  test_multithreaded.rs.orig  test_prefix_extractor.rs  test_raw_iterator.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_statistics.rs
tests/: test.rs  test_backup.rs  test_checkpoint.rs  test_column_family.rs  test_compact_range.rs  test_compaction_filter.rs  test_compaction_service.rs  test_compactionfilter.rs  test_comparator.rs  test_compationfilter.rs  test_db.rs  test_delete_files_in_range.rs  test_delete_range.rs  test_event_listener.rs  test_ingest_external_file.rs  test_iterator.rs  test_merge_operator.rs  test_metadata.rs  test_multithreaded.rs  test_optimistic_transaction.rs  test_optimistic_transaction_db.rs  test_optimistic_transaction_db_memory_usage.rs  test_optimistictransaction.rs  test_perf.rs  test_pinnable_slice.rs  test_prefix_extractor.rs  test_property.rs  test_rate_limiter.rs  test_raw_iterator.rs  test_read_only.rs  test_read_only_db.rs  test_repair.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_sst_file_manager.rs  test_sst_file_writer.rs  test_statistics.rs  test_table_properties.rs  test_transaction.rs  test_transaction_db.rs  (+5 more)
tests/cases/: mod.rs  test_checkpoint.rs  test_column_family.rs  test_compact_range.rs  test_compaction_filter.rs  test_compression.rs  test_delete_files_in_range.rs  test_delete_range.rs  test_encryption.rs  test_event_listener.rs  test_iterator.rs  (+14 more)
travis-build/: Makefile  travis-format.sh
(+23 files in other folders)
