[package]
name = "rust-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.21.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/zaidoon1/rust-rocksdb"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/zaidoon1/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[workspace]
members = ["librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
jemalloc = ["librocksdb-sys/jemalloc"]
io-uring = ["librocksdb-sys/io-uring"]
valgrind = []
snappy = ["librocksdb-sys/snappy"]
lz4 = ["librocksdb-sys/lz4"]
zstd = ["librocksdb-sys/zstd"]
zlib = ["librocksdb-sys/zlib"]
bzip2 = ["librocksdb-sys/bzip2"]
rtti = ["librocksdb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
librocksdb-sys = { path = "librocksdb-sys", version = "0.16.0" }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
trybuild = "1"
tempfile = "3"
pretty_assertions = "1"
bincode = "1"
serde = { version = "1", features = [ "derive" ] }
