[package]
name = "rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.23.0"
edition = "2021"
rust-version = "1.85.0"
authors = [
    "Tyler Neely <t@jujit.su>",
    "David Greenberg <dsg123456789@gmail.com>",
]
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/rust-rocksdb/rust-rocksdb"
exclude = [".gitignore", ".travis.yml", "deploy.sh", "test/**/*"]

[workspace]
members = ["librocksdb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2", "bindgen-runtime"]
jemalloc = ["librocksdb-sys/jemalloc"]
io-uring = ["librocksdb-sys/io-uring"]
valgrind = []
mt_static = ["librocksdb-sys/mt_static"]
snappy = ["librocksdb-sys/snappy"]
lz4 = ["librocksdb-sys/lz4"]
zstd = ["librocksdb-sys/zstd"]
zlib = ["librocksdb-sys/zlib"]
bzip2 = ["librocksdb-sys/bzip2"]
rtti = ["librocksdb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]
bindgen-runtime = ["librocksdb-sys/bindgen-runtime"]
bindgen-static = ["librocksdb-sys/bindgen-static"]
lto = ["librocksdb-sys/lto"]

[dependencies]
libc = "0.2"
librocksdb-sys = { path = "librocksdb-sys", version = "0.17.1", default-features = false, features = [
    "static",
] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
pretty_assertions = "1"
tempfile = "3"
trybuild = "1"
