[package]
name = "librocksdb-sys"
version = "0.6.1+6.28.2"
edition = "2018"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
keywords = [ "bindings", "ffi", "rocksdb" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
links = "rocksdb"

[features]
default = [ "static" ]
jemalloc = ["tikv-jemalloc-sys"]
static = ["libz-sys/static", "bzip2-sys/static"]
snappy = []
lz4 = []
zstd = ["zstd-sys"]
zlib = ["libz-sys"]
bzip2 = ["bzip2-sys"]
rtti = []

[dependencies]
libc = "0.2"
tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
zstd-sys = { version = "1.6", default-features = false, optional = true }
libz-sys = { version = "1.1", default-features = false, optional = true }
bzip2-sys = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
glob = "0.3"
