[package]
name = "librocksdb-sys"
version = "0.17.2+9.10.0"
edition = "2021"
rust-version = "1.71.1"
authors = [
    "Karl Hobley <karlhobley10@gmail.com>",
    "Arkadiy Paronyan <arkadiy@ethcore.io>",
]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
keywords = ["bindings", "ffi", "rocksdb"]
categories = ["api-bindings", "database", "external-ffi-bindings"]
links = "rocksdb"

[features]
default = ["static", "bindgen/runtime"]
jemalloc = ["tikv-jemalloc-sys"]
static = ["libz-sys?/static", "bzip2-sys?/static"]
bindgen-runtime = ["bindgen/runtime"]
bindgen-static = ["bindgen/static"]
mt_static = []
io-uring = ["pkg-config"]
snappy = []
lz4 = ["lz4-sys"]
zstd = ["zstd-sys"]
zlib = ["libz-sys"]
bzip2 = ["bzip2-sys"]
rtti = []
lto = []

[dependencies]
libc = "0.2"
tikv-jemalloc-sys = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
lz4-sys = { version = "1.10", optional = true }
zstd-sys = { version = "2.0", features = ["zdict_builder"], optional = true }
libz-sys = { version = "1.1", default-features = false, optional = true }
bzip2-sys = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.69", default-features = false }
pkg-config = { version = "0.3", optional = true }
