[package]
name = "librocksdb_sys"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
build = "build.rs"
links = "rocksdb"

[dependencies]
bzip2-sys = { version = "0.1.11+1.0.8", features = ["static"] }
libc = "0.2.11"
libtitan_sys = { path = "libtitan_sys" }
libz-sys = { version = "1.1", features = ["static"] }
openssl-sys = { version = "0.9.54", optional = true, features = ["vendored"] }
zstd-sys = "2.0.1+zstd.1.5.2"
lz4-sys = "1.9"

[dev-dependencies]
tempfile = "3.1"

[features]
default = []
encryption = ["openssl-sys"]
jemalloc = ["tikv-jemalloc-sys"]
# portable doesn't require static link, though it's meaningless
# when not using with static-link right now in this crate.
portable = ["libtitan_sys/portable"]
sse = ["libtitan_sys/sse"]
static_libcpp = []

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
bindgen = { version = "0.57", default-features = false, features = ["runtime"] }

[dependencies.tikv-jemalloc-sys]
version = "0.5.0"
optional = true
features = ["unprefixed_malloc_on_supported_platforms"]

[dependencies.snappy-sys]
git = "https://github.com/busyjay/rust-snappy.git"
branch = "static-link"
