[package]
name = "parity-rocksdb-sys"
version = "0.5.0"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>", "Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0/BSD"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/paritytech/rust-rocksdb.git"
keywords = ["ffi", "rocksdb"]

build = "build.rs"
links = "rocksdb"

[features]
default = []

[dependencies]
libc = "0.2"
local-encoding = "0.2.0"
snappy-sys = { git = "https://github.com/paritytech/rust-snappy" }

[build-dependencies]
cmake = "0.1"
