[package]
name = "parity-rocksdb-sys"
version = "0.5.3"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>", "Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/paritytech/rust-rocksdb.git"
keywords = ["ffi", "rocksdb"]

build = "build.rs"
links = "rocksdb"

[features]
default = []

[dependencies]
libc = "0.2"
local-encoding = "0.2.0"
parity-snappy-sys = "0.1"

[build-dependencies]
cmake = "0.1"
