[package]
name = "libtitan_sys"
version = "0.0.1"
build = "build.rs"
links = "titan"

[dependencies]
libc = "0.2.11"

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"

[dependencies.libz-sys]
version = "1.0.25"
features = ["static"]

[dependencies.bzip2-sys]
git = "https://github.com/alexcrichton/bzip2-rs.git"

[dependencies.lz4-sys]
git = "https://github.com/busyjay/lz4-rs.git"
branch = "adjust-build"

[dependencies.zstd-sys]
git = "https://github.com/gyscos/zstd-rs.git"

[dependencies.snappy-sys]
git = "https://github.com/busyjay/rust-snappy.git"
branch = "static-link"
