[package]
name = "libtitan_sys"
version = "0.0.1"
build = "build.rs"
links = "titan"

[dependencies]
bzip2-sys = "0.1.8+1.0.8"
libc = "0.2.11"
libz-sys = { version = "1.0.25", features = ["static"] }
zstd-sys = "1.4.15+zstd.1.4.4"

[features]
default = []
# portable doesn't require static link, though it's meaningless
# when not using with static-link right now in this crate.
portable = []
sse = []

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"

[dependencies.lz4-sys]
git = "https://github.com/busyjay/lz4-rs.git"
branch = "adjust-build"

[dependencies.snappy-sys]
git = "https://github.com/busyjay/rust-snappy.git"
branch = "static-link"
